--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         
         <!-- Section 1: Hero -->
         <section id="hero">
+            <img src="headshot.jpg" alt="" style="width: 120px; height: 120px; border-radius: 50%; margin-bottom: 1rem;">
             <span class="mono hero-tag">Available for strategic builds</span>
             <h1>Building practical systems at the edge of AI, Web3, and real-world constraints.</h1>
             <p class="subhead">Engineer by training. Operator by instinct. Curious by default.</p>
