--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <span class="mono">01. Origin</span>
             <div class="grid-2">
                 <div>
-                    <h2 style="margin-top: 1rem;">I didn’t start in Web3 or AI—I started with systems that touch the physical world.</h2>
+                    <h2 style="margin-top: 1rem;">I didn’t start in Web3 or AI I started with systems that touch the physical world.</h2>
                 </div>
                 <div>
                     <p style="color: var(--secondary); margin-bottom: 1.5rem;">My background is in environmental engineering, with real experience in logistics and operations, where inefficiencies are expensive and abstraction breaks quickly.</p>
