--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <span class="mono hero-tag">Available for strategic builds</span>
             <h1>Building practical systems at the edge of AI, Web3, and real-world constraints.</h1>
             <p class="subhead">Engineer by training. Operator by instinct. Curious by default.</p>
-            <p class="hero-para">I explore how emerging technologies—AI, decentralized finance, and digital coordination—can be grounded in reality. I’m here to build things that make sense after the excitement fades.</p>
+            <p class="hero-para">I explore how emerging technologies AI, decentralized finance, and digital coordination can be grounded in reality. I’m here to build things that make sense after the excitement fades.</p>
             <div class="cta-group">
                 <a href="#work" class="btn btn-primary">See What I’m Building</a>
                 <a href="#connect" class="btn btn-secondary">Let’s Connect</a>
