--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="role-card">
                     <span class="mono">Execution</span>
                     <h3>Building & Experimentation</h3>
-                    <p>Using AI tools to prototype, test, and iterate quickly—turning ideas into working artifacts instead of decks.</p>
+                    <p>Using AI tools to prototype, test, and iterate quickly turning ideas into working artifacts instead of decks.</p>
                 </div>
                 <div class="role-card">
                     <span class="mono">Analysis</span>
