--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <h2>Design & Print Brand</h2>
                 </div>
                 <div>
-                    <p style="color: var(--secondary);">Alongside technical work, I explore how ideas translate into physical form. It’s a reminder that not everything meaningful lives on a screen—and that aesthetics matter even in technical systems.</p>
+                    <p style="color: var(--secondary);">Alongside technical work, I explore how ideas translate into physical form. It’s a reminder that not everything meaningful lives on a screen and that aesthetics matter even in technical systems.</p>
                 </div>
             </div>
         </section>
