--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="project-item">
                     <h3>MAITRIX</h3>
                     <div>
-                        <p><strong>Intelligent Stablecoins.</strong> Exploring how AI projects can issue stable assets backed by native tokens. Exploring where AI meets money—and what breaks first.</p>
+                        <p><strong>Intelligent Stablecoins.</strong> Exploring how AI projects can issue stable assets backed by native tokens. Exploring where AI meets money and what breaks first.</p>
                         <div class="project-tags mono">AI / DEFI / RISK</div>
                     </div>
                 </div>
