--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="project-item">
-                    <h3>PIGD</h3>
+                    <h3>GREEN INITIATIVES</h3>
                     <div>
                         <p><strong>Green Development.</strong> Initiatives focused on sustainable development and operational execution. Grounded in real-world constraints and organizational complexity.</p>
                         <div class="project-tags mono">INFRASTRUCTURE / OPS</div>
