--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo mono" onclick="window.scrollTo(0,0)">PA_SYSTEMS</div>
+                <div class="logo mono" onclick="window.scrollTo(0,0)">PA (GREEN NINJA)</div>
                 <div class="nav-links">
                     <a href="#about">About</a>
                     <a href="#work">Work</a>
