--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             <div class="cta-group">
                 <a href="#work" class="btn btn-primary">See What I’m Building</a>
                 <a href="#connect" class="btn btn-secondary">Let’s Connect</a>
+                 <a href="#PLAY" class="btn btn-secondary">Challenge Me at Snake 🐍</a>
             </div>
         </section>
 
@@ -398,6 +399,7 @@
                 <a href="mailto:patrickamaibi@gmail.com">Email</a>
                 <a href="https://x.com/0xgreenninja" target="_blank">Twitter/X</a>
                 <a href="https://www.linkedin.com/in/patrickamaibi/" target="_blank">LinkedIn</a>
+                   <a href="snake.html" class="challenge-footer">Challenge Me at Snake 🐍</a>
             </div>
         </section>
 
